@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.0.0_p20100922 (22 Sep 2010)
+
+  22 Sep 2010; Трацевский Александр <alex@gentoo.org>
+  +calculate-install-gui-2.2.0.0_p20100922.ebuild:
+  daily update
+
 *calculate-install-gui-2.2.0.0_p20100920-r1 (21 Sep 2010)
 
   21 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
